--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,23 @@
-# 1. إعداد بيئة بناء PHP (نستخدم إجراء shivammathur/setup-php الأكثر شيوعاً)
-      # لن يقوم هذا الإجراء بتنزيل SDK مباشرة، سنقوم بذلك يدوياً في الخطوة 2
+name: Build FRICC2LOAD Extension for Windows
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
+jobs:
+  build-windows:
+    runs-on: windows-2022
+
+    strategy:
+      matrix:
+        php-version: ['8.2']
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      # 1. Setup generic PHP Environment (This action is reliable)
       - name: Setup PHP Environment
         uses: shivammathur/setup-php@v2 
         with:
@@ -7,35 +25,31 @@
           extensions: none
           tools: none
           ini-values: none
-          # هذا الإجراء يعمل بشكل أفضل في إعداد البيئة الأساسية
-      
-      # 2. تنزيل حزمة تطوير PHP (SDK) يدوياً واستخراجها
+          
+      # 2. Download PHP 8.2 SDK Manually (This step provides the necessary header files)
       - name: Download PHP 8.2 SDK
         run: |
-          # رابط مباشر لحزمة تطوير PHP 8.2 NTS x64 (استناداً إلى الهاش الذي ذكرته سابقاً)
           $sdkUrl = "https://windows.php.net/downloads/releases/php-8.2.29-nts-Win32-vs16-x64.zip" 
           $targetPath = "C:/PHP_SDK.zip"
           Invoke-WebRequest -Uri $sdkUrl -OutFile $targetPath
           Expand-Archive $targetPath -DestinationPath "C:/php-sdk" -Force
           
-      # 3. خطوة التجهيز والتكوين (نحتاج لتعديل المسارات بعد التنزيل اليدوي)
-      - name: Run BuildConf and Configure
+      # 3. Configure and Build
+      - name: Run Configure and NMake Build
         run: |
-          # 1. إعداد ملفات التكوين المفقودة يدوياً (لتجاوز أخطاء C1083)
+          # Copying config headers to satisfy the compiler
           copy C:\php-src\main\config.w32.h.in C:\php-src\main\config.w32.h
           copy C:\php-src\Zend\zend_config.w32.h C:\php-src\Zend\zend_config.h
           copy C:\php-src\main\config.h.in C:\php-src\main\php_config.h
           
-          # 2. تشغيل buildconf ثم configure
+          # Run buildconf and configure with SDK path
           buildconf
-          cscript configure.js --enable-cli --with-zlib --enable-fricc2load=shared --disable-zts --with-vc-vers=vc16 --with-php-build=C:\php-sdk 
+          cscript configure.js --enable-cli --with-zlib --enable-fricc2load=shared --disable-zts --with-vc-vers=vc17 --with-php-build=C:\php-sdk 
           
-      # 4. تشغيل NMAKE للبناء (نترك هذه الخطوة كما هي)
-      - name: Run NMake Build
-        run: |
+          # Run NMAKE
           nmake /j8
-
-      # 5. حفظ ملف DLL الناتج (نترك هذه الخطوة كما هي)
+          
+      # 4. Locate and Upload DLL
       - name: Locate and Upload DLL
         uses: actions/upload-artifact@v4
         with:
