--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,21 +34,17 @@ jobs:
           Invoke-WebRequest -Uri $sdkUrl -OutFile $targetPath
           Expand-Archive $targetPath -DestinationPath "C:/php-sdk" -Force
           
-      # 3. Configure and Build
+     # 3. Configure and Build (اعتماداً على الملفات التي تم رفعها الآن)
       - name: Run Configure and NMake Build
         run: |
-         # 1. نسخ ملفات التكوين الأساسية لـ Windows (بدلاً من الملفات المفقودة)
-            copy C:\php-src\main\build-defs.h.in C:\php-src\main\config.w32.h
-            copy C:\php-src\Zend\zend_config.w32.h C:\php-src\Zend\zend_config.h
-            copy C:\php-src\main\config.h.in C:\php-src\main\php_config.h
-            # إضافة سطر ضروري لملف zend_config.h (قد يسبب أخطاء C1083)
-            copy C:\php-src\Zend\zend_config.w32.h C:\php-src\Zend\zend_config.h
-          
-          # Run buildconf and configure with SDK path
+          # 1. تشغيل buildconf (لإنشاء سكريبت التكوين)
           buildconf
-          cscript configure.js --enable-cli --with-zlib --enable-fricc2load=shared --disable-zts --with-vc-vers=vc17 --with-php-build=C:\php-sdk 
           
-          # Run NMAKE
+          # 2. تشغيل التكوين (Configure)
+          # نستخدم --with-vc-vers=vc16 لأنه يتوافق مع الـ SDK الذي نزلناه
+          cscript configure.js --enable-cli --with-zlib --enable-fricc2load=shared --disable-zts --with-vc-vers=vc16 --with-php-build=C:\php-sdk 
+          
+          # 3. تشغيل NMAKE للبناء الفعلي
           nmake /j8
           
       # 4. Locate and Upload DLL
