--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,58 +1,58 @@
 name: Build FRICC2LOAD Extension for Windows
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   build-windows:
     runs-on: windows-2022
 
-    strategy:
-      matrix:
-        php-version: ['8.2']
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      # 1. Setup generic PHP Environment (This action is reliable)
-      - name: Setup PHP Environment
-        uses: shivammathur/setup-php@v2 
-        with:
-          php-version: ${{ matrix.php-version }}
-          extensions: none
-          tools: none
-          ini-values: none
-          
-      # 2. Download PHP 8.2 SDK Manually (This step provides the necessary header files)
-      - name: Download PHP 8.2 SDK
-        run: |
-          $sdkUrl = "https://windows.php.net/downloads/releases/php-8.2.29-nts-Win32-vs16-x64.zip" 
-          $targetPath = "C:/PHP_SDK.zip"
-          Invoke-WebRequest -Uri $sdkUrl -OutFile $targetPath
-          Expand-Archive $targetPath -DestinationPath "C:/php-sdk" -Force
-          
-  # 3. Configure and Build 
-      - name: Run Configure and NMake Build
-        run: |
-          # 1. الانتقال إلى المجلد الرئيسي للكود المصدري باستخدام متغير WORKSPACE
-          cd ${{ github.workspace }}
-          
-          # 2. تشغيل buildconf.bat من داخل المجلد
-          buildconf.bat
-          
-          # 3. تشغيل التكوين (Configure)
-          cscript configure.js --enable-cli --with-zlib --enable-fricc2load=shared --disable-zts --with-vc-vers=vc16 --with-php-build=C:\php-sdk 
-          
-          # 4. تشغيل NMAKE للبناء الفعلي
-          nmake /j8
-          
-          
-      # 4. Locate and Upload DLL
-      - name: Locate and Upload DLL
-        uses: actions/upload-artifact@v4
-        with:
-          name: php-fricc2load-dll-${{ matrix.php-version }}-nts-x64
-          path: x64/Release_NTS/php_fricc2load.dll
+    # 1. Checkout Code
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
+    # 2. Download PHP SDK (phpsdk)
+    - name: Download PHP SDK Tools
+      run: |
+        Invoke-WebRequest -Uri "https://github.com/microsoft/php-sdk-binary-tools/archive/refs/heads/master.zip" -OutFile "C:/php-sdk-tools.zip"
+        Expand-Archive "C:/php-sdk-tools.zip" -DestinationPath "C:/"
+
+    # 3. Download php-src for PHP 8.2
+    - name: Download php-src 8.2
+      run: |
+        Invoke-WebRequest -Uri "https://github.com/php/php-src/archive/refs/heads/PHP-8.2.zip" -OutFile "C:/php-src.zip"
+        Expand-Archive "C:/php-src.zip" -DestinationPath "C:/"
+
+    # 4. Create Build Tree
+    - name: Initialize Build Tree
+      run: |
+        cd C:/php-sdk-binary-tools-master
+        .\phpsdk-vs16-x64.bat -t phpdev
+
+    # 5. Copy php-src Into Build Tree
+    - name: Move php-src Into Build tree
+      run: |
+        Move-Item -Path "C:/php-src-PHP-8.2" -Destination "C:/php-sdk/phpdev/php-src" -Force
+
+    # 6. Copy Your Extension into php-src/ext
+    - name: Copy fricc2load Extension
+      run: |
+        Copy-Item -Path "${{ github.workspace }}/fricc2load" -Destination "C:/php-sdk/phpdev/php-src/ext/fricc2load" -Recurse -Force
+
+    # 7. Run buildconf, configure, and NMAKE
+    - name: Build DLL
+      run: |
+        cd C:/php-sdk/phpdev/php-src
+        buildconf.bat
+        cscript configure.js --enable-cli --disable-zts --enable-fricc2load=shared --with-mp=64
+        nmake
+
+    # 8. Upload DLL Output
+    - name: Upload fricc2load DLL
+      uses: actions/upload-artifact@v4
+      with:
+        name: fricc2load-windows-php82
+        path: C:/php-sdk/phpdev/php-src/x64/Release/php_fricc2load.dll
